# agricole-api/src/main/java/mg/federation/agricole_api/entity/Gender.java
@@ -1,0 +1,7 @@
+package mg.federation.agricole_api.entity;
+
+public enum Gender {
+     MALE,
+     FEMALE 
+    
+}
