# agricole-api/src/main/java/mg/federation/agricole_api/entity/MemberOccupation.java
@@ -1,0 +1,11 @@
+package mg.federation.agricole_api.entity;
+
+public enum MemberOccupation {
+     JUNIOR,
+     SENIOR,
+     SECRETARY,
+     TREASURER,
+     VICE_PRESIDENT,
+     PRESIDENT 
+    
+}
